src/tests/Loader/classloader/generics/Instantiation/Negative/param01.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <OutputType>Exe</OutputType>
    <CLRTestPriority>1</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="param01.il" />
  </ItemGroup>
</Project>
